# bbpref

./: .gitignore  AUTHORS  AUTORS  BUGS  CMakeLists.txt  INSTALL  NEWS  README  README.md  THANKS  TODO  bar-descriptor.xml  bbpref.pro  bbpref.qrc  bbpref_ru.ts  gfx.qrc  openpref.1  openpref.pro  openpref.qrc  openpref.rc  openpref_en.ts  openpref_ru.qm  openpref_ru.ts  premake4.lua  qt-support.lua
cmake/: CopyQM.cmake.in  FindLinguist.cmake  cmake_uninstall.cmake.in
doc/: Doxyfile
doc/API_drafts/: Environments.dia  Environments.graphml  GameControllers.graphml
graphics/: icon.pdn
pics/xcf/: bidinfo.xcf  digits.xcf  imove.xcf  presskey.xcf
src/: card.cpp  card.h  cardlist.cpp  cardlist.h  coloda.cpp  coloda.h  ctlist.cpp  debug.cpp  debug.h  desktop.cpp  desktop.h  deskview.cpp  deskview.h  formbid.cpp  gamer.cpp  gamer.h  human.cpp  humang.cpp  humang.h  kpref.cpp  kpref.h  main.cpp  main.h  main.pri  mainwindow.cpp  mainwindow.h  mainwindow.ui  movenode.cpp  movenode.h  ncounter.cpp  newgameform.cpp  optform.cpp  optform.h  papplication.h  pcommon.h  player.cpp  plscore.cpp  plscore.h  prfconst.cpp  prfconst.h  (+6 more)
src/cardutil/: card.cpp  card.h  cardlist.cpp  cardlist.h  cardutil.cmake  cardutil.pri  coloda.cpp  coloda.h  deck.cpp  deck.h
src/desk/: desk.cmake  desk.pri  desktop.cpp  desktop.h  deskview.cpp  deskview.h
src/forms/: formbid.cpp  formbid.h  forms.cmake  forms.pri  helpbrowser.cpp  helpbrowser.h  newgameform.cpp  newgameform.h  optform.cpp  optform.h  qbidbutton.cpp  qbidbutton.h  scorewidget.cpp
src/logic/: aialphabeta.cpp  aialphabeta.h  aiplayer.cpp  aiplayer.h  human.cpp  human.h  logic.cmake  logic.pri  player.cpp  player.h
src/misc/: misc.pri  updatecheck.cpp  updatecheck.h  updatedialog.cpp  updatedialog.h
src/model/: baser.cpp  baser.h  card.cpp  card.h  cardlist.cpp  cardlist.h  debug.cpp  debug.h  desktop.cpp  desktop.h  gamesaveload.cpp  model.pri  ncounter.cpp  ncounter.h  plscore.cpp  plscore.h  scoreboard.cpp  scoreboard.h
src/score/: plscore.cpp  plscore.h  score.cmake  score.pri
src/ui/: newgameform.ui  optform.ui
src/util/: baser.cpp  baser.h  ctlist.cpp  ctlist.h  debug.cpp  debug.h  ncounter.cpp  ncounter.h  util.cmake  util.pri
src/view/: about.ui  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  deskview.cpp  deskview.h  formbid.cpp  formbid.h  gamelogdialog.cpp  gamelogdialog.h  gamelogdialog.ui  helpbrowser.ui  loadgamedialog.cpp  loadgamedialog.h  loadgamedialog.ui  newgameform.cpp  newgameform.h  newgameform.ui  optform.ui  optiondialog.cpp  optiondialog.h  playersinfodialog.cpp  playersinfodialog.h  savegamedialog.cpp  savegamedialog.h  savegamedialog.ui  scorehistory.cpp  scorehistory.h  scorewidget.cpp  scorewidget.h  view.pri
windows/: openpref.iss
